--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -371,30 +371,30 @@ img { max-width: 100%; }
 .b--black-025 { border-color: rgba( 0, 0, 0, .025 ); }
 .b--black-0125 { border-color: rgba( 0, 0, 0, .0125 ); }
 .b--dark-red { border-color: #e7040f; }
-.b--red { border-color: #ff4136; }
-.b--light-red { border-color: #ff725c; }
+.b--red { border-color: #e93b46; }
+.b--light-red { border-color: #f86874; }
 .b--orange { border-color: #ff6300; }
 .b--gold { border-color: #ffb700; }
 .b--yellow { border-color: #ffd700; }
 .b--light-yellow { border-color: #fbf1a9; }
-.b--purple { border-color: #5e2ca5; }
-.b--light-purple { border-color: #a463f2; }
+.b--purple { border-color: #7e5bef; }
+.b--light-purple { border-color: #ad99f0; }
 .b--dark-pink { border-color: #d5008f; }
 .b--hot-pink { border-color: #ff41b4; }
 .b--pink { border-color: #ff80cc; }
 .b--light-pink { border-color: #ffa3d7; }
 .b--dark-green { border-color: #137752; }
 .b--green { border-color: #19a974; }
-.b--light-green { border-color: #9eebcf; }
+.b--light-green { border-color: #c5e5bf; }
 .b--navy { border-color: #001b44; }
-.b--dark-blue { border-color: #00449e; }
-.b--blue { border-color: #357edd; }
+.b--dark-blue { border-color: #18335b; }
+.b--blue { border-color: #1e4770; }
 .b--light-blue { border-color: #96ccff; }
-.b--lightest-blue { border-color: #cdecff; }
-.b--washed-blue { border-color: #f6fffe; }
-.b--washed-green { border-color: #e8fdf5; }
+.b--lightest-blue { border-color: #daf0fe; }
+.b--washed-blue { border-color: #dbe5f0; }
+.b--washed-green { border-color: #ddf0da; }
 .b--washed-yellow { border-color: #fffceb; }
-.b--washed-red { border-color: #ffdfdf; }
+.b--washed-red { border-color: #fbd7da; }
 .b--transparent { border-color: transparent; }
 .b--inherit { border-color: inherit; }
 .b--initial { border-color: initial; }
@@ -722,9 +722,12 @@ img { max-width: 100%; }
 /* From http://cssfontstack.com */
 code, .code { font-family: Consolas, monaco, monospace; }
 .courier { font-family: 'Courier Next', courier, monospace; }
+.recursive-mono, .recursive-monospace { font-family: 'Recursive Monospace', Consolas, monaco, monospace; }
 /* Sans-Serif Typefaces */
 .helvetica { font-family: 'helvetica neue', helvetica, sans-serif; }
 .avenir { font-family: 'avenir next', avenir, sans-serif; }
+.montserrat { font-family: 'Montserrat', sans-serif; }
+.recursive { font-family: 'Recursive', sans-serif; }
 /* Serif Typefaces */
 .athelas { font-family: athelas, georgia, serif; }
 .georgia { font-family: georgia, serif; }
@@ -1106,30 +1109,30 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .near-white { color: #f4f4f4; }
 .white { color: #fff; }
 .dark-red { color: #e7040f; }
-.red { color: #ff4136; }
-.light-red { color: #ff725c; }
+.red { color: #e93b46; }
+.light-red { color: #f86874; }
 .orange { color: #ff6300; }
 .gold { color: #ffb700; }
 .yellow { color: #ffd700; }
 .light-yellow { color: #fbf1a9; }
-.purple { color: #5e2ca5; }
-.light-purple { color: #a463f2; }
+.purple { color: #7e5bef; }
+.light-purple { color: #ad99f0; }
 .dark-pink { color: #d5008f; }
 .hot-pink { color: #ff41b4; }
 .pink { color: #ff80cc; }
 .light-pink { color: #ffa3d7; }
 .dark-green { color: #137752; }
 .green { color: #19a974; }
-.light-green { color: #9eebcf; }
+.light-green { color: #c5e5bf; }
 .navy { color: #001b44; }
-.dark-blue { color: #00449e; }
-.blue { color: #357edd; }
+.dark-blue { color: #18335b; }
+.blue { color: #1e4770; }
 .light-blue { color: #96ccff; }
-.lightest-blue { color: #cdecff; }
-.washed-blue { color: #f6fffe; }
-.washed-green { color: #e8fdf5; }
+.lightest-blue { color: #daf0fe; }
+.washed-blue { color: #dbe5f0; }
+.washed-green { color: #ddf0da; }
 .washed-yellow { color: #fffceb; }
-.washed-red { color: #ffdfdf; }
+.washed-red { color: #fbd7da; }
 .color-inherit { color: inherit; }
 /* Background colors */
 .bg-black-90 { background-color: rgba( 0, 0, 0, .9 ); }
@@ -1164,30 +1167,30 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .bg-white { background-color: #fff; }
 .bg-transparent { background-color: transparent; }
 .bg-dark-red { background-color: #e7040f; }
-.bg-red { background-color: #ff4136; }
-.bg-light-red { background-color: #ff725c; }
+.bg-red { background-color: #e93b46; }
+.bg-light-red { background-color: #f86874; }
 .bg-orange { background-color: #ff6300; }
 .bg-gold { background-color: #ffb700; }
 .bg-yellow { background-color: #ffd700; }
 .bg-light-yellow { background-color: #fbf1a9; }
-.bg-purple { background-color: #5e2ca5; }
-.bg-light-purple { background-color: #a463f2; }
+.bg-purple { background-color: #7e5bef; }
+.bg-light-purple { background-color: #ad99f0; }
 .bg-dark-pink { background-color: #d5008f; }
 .bg-hot-pink { background-color: #ff41b4; }
 .bg-pink { background-color: #ff80cc; }
 .bg-light-pink { background-color: #ffa3d7; }
 .bg-dark-green { background-color: #137752; }
 .bg-green { background-color: #19a974; }
-.bg-light-green { background-color: #9eebcf; }
+.bg-light-green { background-color: #c5e5bf; }
 .bg-navy { background-color: #001b44; }
-.bg-dark-blue { background-color: #00449e; }
-.bg-blue { background-color: #357edd; }
+.bg-dark-blue { background-color: #18335b; }
+.bg-blue { background-color: #1e4770; }
 .bg-light-blue { background-color: #96ccff; }
-.bg-lightest-blue { background-color: #cdecff; }
-.bg-washed-blue { background-color: #f6fffe; }
-.bg-washed-green { background-color: #e8fdf5; }
+.bg-lightest-blue { background-color: #daf0fe; }
+.bg-washed-blue { background-color: #dbe5f0; }
+.bg-washed-green { background-color: #ddf0da; }
 .bg-washed-yellow { background-color: #fffceb; }
-.bg-washed-red { background-color: #ffdfdf; }
+.bg-washed-red { background-color: #fbd7da; }
 .bg-inherit { background-color: inherit; }
 /* 
   
@@ -1318,10 +1321,10 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-bg-white-10:focus { background-color: rgba( 255, 255, 255, .1 ); }
 .hover-dark-red:hover { color: #e7040f; }
 .hover-dark-red:focus { color: #e7040f; }
-.hover-red:hover { color: #ff4136; }
-.hover-red:focus { color: #ff4136; }
-.hover-light-red:hover { color: #ff725c; }
-.hover-light-red:focus { color: #ff725c; }
+.hover-red:hover { color: #e93b46; }
+.hover-red:focus { color: #e93b46; }
+.hover-light-red:hover { color: #f86874; }
+.hover-light-red:focus { color: #f86874; }
 .hover-orange:hover { color: #ff6300; }
 .hover-orange:focus { color: #ff6300; }
 .hover-gold:hover { color: #ffb700; }
@@ -1330,10 +1333,10 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-yellow:focus { color: #ffd700; }
 .hover-light-yellow:hover { color: #fbf1a9; }
 .hover-light-yellow:focus { color: #fbf1a9; }
-.hover-purple:hover { color: #5e2ca5; }
-.hover-purple:focus { color: #5e2ca5; }
-.hover-light-purple:hover { color: #a463f2; }
-.hover-light-purple:focus { color: #a463f2; }
+.hover-purple:hover { color: #7e5bef; }
+.hover-purple:focus { color: #7e5bef; }
+.hover-light-purple:hover { color: #ad99f0; }
+.hover-light-purple:focus { color: #ad99f0; }
 .hover-dark-pink:hover { color: #d5008f; }
 .hover-dark-pink:focus { color: #d5008f; }
 .hover-hot-pink:hover { color: #ff41b4; }
@@ -1346,32 +1349,32 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-dark-green:focus { color: #137752; }
 .hover-green:hover { color: #19a974; }
 .hover-green:focus { color: #19a974; }
-.hover-light-green:hover { color: #9eebcf; }
-.hover-light-green:focus { color: #9eebcf; }
+.hover-light-green:hover { color: #c5e5bf; }
+.hover-light-green:focus { color: #c5e5bf; }
 .hover-navy:hover { color: #001b44; }
 .hover-navy:focus { color: #001b44; }
-.hover-dark-blue:hover { color: #00449e; }
-.hover-dark-blue:focus { color: #00449e; }
-.hover-blue:hover { color: #357edd; }
-.hover-blue:focus { color: #357edd; }
+.hover-dark-blue:hover { color: #18335b; }
+.hover-dark-blue:focus { color: #18335b; }
+.hover-blue:hover { color: #1e4770; }
+.hover-blue:focus { color: #1e4770; }
 .hover-light-blue:hover { color: #96ccff; }
 .hover-light-blue:focus { color: #96ccff; }
-.hover-lightest-blue:hover { color: #cdecff; }
-.hover-lightest-blue:focus { color: #cdecff; }
-.hover-washed-blue:hover { color: #f6fffe; }
-.hover-washed-blue:focus { color: #f6fffe; }
-.hover-washed-green:hover { color: #e8fdf5; }
-.hover-washed-green:focus { color: #e8fdf5; }
+.hover-lightest-blue:hover { color: #daf0fe; }
+.hover-lightest-blue:focus { color: #daf0fe; }
+.hover-washed-blue:hover { color: #dbe5f0; }
+.hover-washed-blue:focus { color: #dbe5f0; }
+.hover-washed-green:hover { color: #ddf0da; }
+.hover-washed-green:focus { color: #ddf0da; }
 .hover-washed-yellow:hover { color: #fffceb; }
 .hover-washed-yellow:focus { color: #fffceb; }
-.hover-washed-red:hover { color: #ffdfdf; }
-.hover-washed-red:focus { color: #ffdfdf; }
+.hover-washed-red:hover { color: #fbd7da; }
+.hover-washed-red:focus { color: #fbd7da; }
 .hover-bg-dark-red:hover { background-color: #e7040f; }
 .hover-bg-dark-red:focus { background-color: #e7040f; }
-.hover-bg-red:hover { background-color: #ff4136; }
-.hover-bg-red:focus { background-color: #ff4136; }
-.hover-bg-light-red:hover { background-color: #ff725c; }
-.hover-bg-light-red:focus { background-color: #ff725c; }
+.hover-bg-red:hover { background-color: #e93b46; }
+.hover-bg-red:focus { background-color: #e93b46; }
+.hover-bg-light-red:hover { background-color: #f86874; }
+.hover-bg-light-red:focus { background-color: #f86874; }
 .hover-bg-orange:hover { background-color: #ff6300; }
 .hover-bg-orange:focus { background-color: #ff6300; }
 .hover-bg-gold:hover { background-color: #ffb700; }
@@ -1380,10 +1383,10 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-bg-yellow:focus { background-color: #ffd700; }
 .hover-bg-light-yellow:hover { background-color: #fbf1a9; }
 .hover-bg-light-yellow:focus { background-color: #fbf1a9; }
-.hover-bg-purple:hover { background-color: #5e2ca5; }
-.hover-bg-purple:focus { background-color: #5e2ca5; }
-.hover-bg-light-purple:hover { background-color: #a463f2; }
-.hover-bg-light-purple:focus { background-color: #a463f2; }
+.hover-bg-purple:hover { background-color: #7e5bef; }
+.hover-bg-purple:focus { background-color: #7e5bef; }
+.hover-bg-light-purple:hover { background-color: #ad99f0; }
+.hover-bg-light-purple:focus { background-color: #ad99f0; }
 .hover-bg-dark-pink:hover { background-color: #d5008f; }
 .hover-bg-dark-pink:focus { background-color: #d5008f; }
 .hover-bg-hot-pink:hover { background-color: #ff41b4; }
@@ -1396,26 +1399,26 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-bg-dark-green:focus { background-color: #137752; }
 .hover-bg-green:hover { background-color: #19a974; }
 .hover-bg-green:focus { background-color: #19a974; }
-.hover-bg-light-green:hover { background-color: #9eebcf; }
-.hover-bg-light-green:focus { background-color: #9eebcf; }
+.hover-bg-light-green:hover { background-color: #c5e5bf; }
+.hover-bg-light-green:focus { background-color: #c5e5bf; }
 .hover-bg-navy:hover { background-color: #001b44; }
 .hover-bg-navy:focus { background-color: #001b44; }
-.hover-bg-dark-blue:hover { background-color: #00449e; }
-.hover-bg-dark-blue:focus { background-color: #00449e; }
-.hover-bg-blue:hover { background-color: #357edd; }
-.hover-bg-blue:focus { background-color: #357edd; }
+.hover-bg-dark-blue:hover { background-color: #18335b; }
+.hover-bg-dark-blue:focus { background-color: #18335b; }
+.hover-bg-blue:hover { background-color: #1e4770; }
+.hover-bg-blue:focus { background-color: #1e4770; }
 .hover-bg-light-blue:hover { background-color: #96ccff; }
 .hover-bg-light-blue:focus { background-color: #96ccff; }
-.hover-bg-lightest-blue:hover { background-color: #cdecff; }
-.hover-bg-lightest-blue:focus { background-color: #cdecff; }
-.hover-bg-washed-blue:hover { background-color: #f6fffe; }
-.hover-bg-washed-blue:focus { background-color: #f6fffe; }
-.hover-bg-washed-green:hover { background-color: #e8fdf5; }
-.hover-bg-washed-green:focus { background-color: #e8fdf5; }
+.hover-bg-lightest-blue:hover { background-color: #daf0fe; }
+.hover-bg-lightest-blue:focus { background-color: #daf0fe; }
+.hover-bg-washed-blue:hover { background-color: #dbe5f0; }
+.hover-bg-washed-blue:focus { background-color: #dbe5f0; }
+.hover-bg-washed-green:hover { background-color: #ddf0da; }
+.hover-bg-washed-green:focus { background-color: #ddf0da; }
 .hover-bg-washed-yellow:hover { background-color: #fffceb; }
 .hover-bg-washed-yellow:focus { background-color: #fffceb; }
-.hover-bg-washed-red:hover { background-color: #ffdfdf; }
-.hover-bg-washed-red:focus { background-color: #ffdfdf; }
+.hover-bg-washed-red:hover { background-color: #fbd7da; }
+.hover-bg-washed-red:focus { background-color: #fbd7da; }
 .hover-bg-inherit:hover, .hover-bg-inherit:focus { background-color: inherit; }
 /* Variables */
 /*
@@ -1950,7 +1953,7 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .nested-copy-indent p+p { text-indent: 1em; margin-top: 0; margin-bottom: 0; }
 .nested-copy-separator p+p { margin-top: 1.5em; }
 .nested-img img { width: 100%; max-width: 100%; display: block; }
-.nested-links a { color: #357edd; transition: color .15s ease-in; }
+.nested-links a { color: #1e4770; transition: color .15s ease-in; }
 .nested-links a:hover { color: #96ccff; transition: color .15s ease-in; }
 .nested-links a:focus { color: #96ccff; transition: color .15s ease-in; }
 /*
