--- a/src/_colors.css
+++ b/src/_colors.css
@@ -52,29 +52,28 @@
  --white-0125: rgba(255,255,255,.0125);
 
   --dark-red:  #e7040f;
-  --red:  #ff4136;
-  --light-red:  #ff725c;
+  --red:  #E93B46;
+  --light-red:  #f86874;
   --orange:  #ff6300;
   --gold:  #ffb700;
   --yellow:  #ffd700;
   --light-yellow:  #fbf1a9;
-  --purple:  #5e2ca5;
-  --light-purple:  #a463f2;
+  --purple:  #7e5bef;
+  --light-purple:  #ad99f0;
   --dark-pink:  #d5008f;
   --hot-pink: #ff41b4;
   --pink:  #ff80cc;
   --light-pink:  #ffa3d7;
   --dark-green:  #137752;
   --green:  #19a974;
-  --light-green:  #9eebcf;
+  --light-green: #C5E5BF;
   --navy:  #001b44;
-  --dark-blue:  #00449e;
-  --blue:  #357edd;
+  --dark-blue:  #18335b;
+  --blue:  #1E4770;
   --light-blue:  #96ccff;
-  --lightest-blue:  #cdecff;
-  --washed-blue:  #f6fffe;
-  --washed-green:  #e8fdf5;
+  --lightest-blue:  #daf0fe;
+  --washed-blue:  #dbe5f0;
+  --washed-green:  #ddf0da;
   --washed-yellow:  #fffceb;
-  --washed-red:  #ffdfdf;
-
+  --washed-red:  #fbd7da;
 }
